@@ -253,6 +253,17 @@ public class BaseCommand implements TabCompleter{
 	}
 	
 	@NotNull
+	protected static Town getTownOrThrow(String townName) throws NotRegisteredException {
+		Town town = TownyUniverse.getInstance().getTown(townName);
+
+		if (town == null) {
+			throw new NotRegisteredException(Translation.of("msg_err_not_registered_1", townName));
+		}
+
+		return town;
+	}
+	
+	@NotNull
 	protected static Nation getNationOrThrow(String nationName) throws NotRegisteredException {
 		Nation nation = TownyUniverse.getInstance().getNation(nationName);
 
